--- a/nesTop.qsf
+++ b/nesTop.qsf
@@ -42,18 +42,7 @@ set_global_assignment -name DEVICE EP4CE22F17C6
 set_global_assignment -name TOP_LEVEL_ENTITY nesTop
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 16.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "14:19:56  MARCH 25, 2017"
-set_global_assignment -name LAST_QUARTUS_VERSION 16.0.0
-set_global_assignment -name SYSTEMVERILOG_FILE verilog/vga_out.sv
-set_global_assignment -name SYSTEMVERILOG_FILE verilog/vga_fb.sv
-set_global_assignment -name SYSTEMVERILOG_FILE verilog/roms.sv
-set_global_assignment -name SYSTEMVERILOG_FILE verilog/ppu.sv
-set_global_assignment -name SYSTEMVERILOG_FILE verilog/nesTop.sv
-set_global_assignment -name SYSTEMVERILOG_FILE verilog/joypad.sv
-set_global_assignment -name SYSTEMVERILOG_FILE verilog/CPUMMC.sv
-set_global_assignment -name VERILOG_FILE verilog/cpu.v
-set_global_assignment -name SYSTEMVERILOG_FILE verilog/clocks.sv
-set_global_assignment -name SYSTEMVERILOG_FILE verilog/apu.sv
-set_global_assignment -name VERILOG_FILE verilog/ALU.v
+set_global_assignment -name LAST_QUARTUS_VERSION "16.1.0 Lite Edition"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
@@ -245,3 +234,17 @@ set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name SYSTEMVERILOG_FILE verilog/uart.sv
+set_global_assignment -name SYSTEMVERILOG_FILE verilog/vga_out.sv
+set_global_assignment -name SYSTEMVERILOG_FILE verilog/vga_fb.sv
+set_global_assignment -name SYSTEMVERILOG_FILE verilog/roms.sv
+set_global_assignment -name SYSTEMVERILOG_FILE verilog/ppu.sv
+set_global_assignment -name SYSTEMVERILOG_FILE verilog/nesTop.sv
+set_global_assignment -name SYSTEMVERILOG_FILE verilog/joypad.sv
+set_global_assignment -name SYSTEMVERILOG_FILE verilog/CPUMMC.sv
+set_global_assignment -name VERILOG_FILE verilog/cpu.v
+set_global_assignment -name SYSTEMVERILOG_FILE verilog/clocks.sv
+set_global_assignment -name SYSTEMVERILOG_FILE verilog/apu.sv
+set_global_assignment -name VERILOG_FILE verilog/ALU.v
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
